# bitflux_mcp

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml
api_client/: __init__.py  exceptions.py  rest.py
api_client/api/: default_api.py
api_client/models/: __init__.py  download_stats_request.py  machine_lookup_request.py
pkg/bitflux_catcher_api/: pyproject.toml
pkg/bitflux_catcher_api/src/api_client/: api_client.py  configuration.py
pkg/bitflux_catcher_api/src/bitflux_catcher_api/: __init__.py
pkg/downloadstats/: pyproject.toml
pkg/downloadstats/src/downloadstats/: __init__.py  tool.py
pkg/downloadstats/tests/: test_machine_lookup_integration.py  test_tool_download_stats_integration.py  test_tool_scale_and_summarize.py
pkg/ec2_tools/: pyproject.toml
pkg/ec2_tools/src/ec2_tools/: __init__.py  ec2_pricing.py
pkg/machine_lookup/: pyproject.toml
pkg/machine_lookup/src/machine_lookup/: __init__.py  tool.py
server/: __init__.py  cli.py
server/bitflux_catcher_api/: downloadstats_pb2.py
server/downloadstats/: __init__.py  test.py  tool.py
server/ec2_tools/: __init__.py  ec2_account.py  ec2_ami.py  ec2_instances.py  ec2_pricing.py
server/machine_lookup/: __init__.py  sha256tool.py  tool.py
server/machine_lookup/rust_test/: Cargo.toml
server/machine_lookup/rust_test/src/: main.rs
server/tools/: downloadstats.py  get_ec2_pricing.py  list_ec2_instances.py  machine_lookup.py  recommendation.py
